--- a/estilo/style.css
+++ b/estilo/style.css
@@ -61,11 +61,11 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 30px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.452);
 }
 
 nav {
-    text-align: center;
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 8px rgba(0, 0, 0, 0.473);
